force-app/main/default/objects/Migration_File__c/Migration_File__c.object-meta.xml
<CustomObject>
    <label>Migration File</label>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Migration File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>