force-app/main/default/objects/Migration_File__c/fields/Bulk_JobId__c.field-meta.xml
<CustomField>
    <fullName>Bulk_JobId__c</fullName>
    <label>Bulk JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>