force-app/main/default/objects/Migration_File__c/fields/Failed_Record__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record__c</fullName>
    <label>Failed Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>