force-app/main/default/objects/Migration_File__c/fields/Job_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Time__c</fullName>
    <label>Job End Time</label>
    <type>DateTime</type>
</CustomField>