force-app/main/default/objects/Migration_File__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Generated</fullName>
            </value>
            <value>
                <fullName>Job Submitted</fullName>
            </value>
            <value>
                <fullName>Job Inprogress</fullName>
            </value>
            <value>
                <fullName>Job Successful</fullName>
            </value>
            <value>
                <fullName>Job Failed</fullName>
            </value>
            <value>
                <fullName>Job Partial Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>