force-app/main/default/objects/Migration_File__c/fields/Migration_Object__c.field-meta.xml
<CustomField>
    <fullName>Migration_Object__c</fullName>
    <label>Migration Object</label>
    <referenceTo>Migration_Object__c</referenceTo>
    <relationshipLabel>Migration Files</relationshipLabel>
    <relationshipName>Migration_Files</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>