force-app/main/default/objects/Migration_File__c/fields/Successful_Record__c.field-meta.xml
<CustomField>
    <fullName>Successful_Record__c</fullName>
    <label>Successful Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>